rewrite project introduction paragraph

--- a/project.ipynb
+++ b/project.ipynb
@@ -37,74 +37,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39df657d",
-   "metadata": {},
-   "source": [
-    "## Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e4db8bf",
-   "metadata": {},
-   "source": [
-    "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, stands as a seminal contribution to the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, holds a unique place in the annals of statistical and botanical research. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
-    "\n",
-    "At its core, the dataset is elegantly simple. Each iris sample is characterized by four essential features: sepal length, sepal width, petal length, and petal width—each meticulously recorded in centimeters. These features serve as the foundation for supervised learning endeavors, where the challenge lies in building classification models that can discern the subtle botanical differences among iris species.\n",
-    "\n",
-    "Beyond its historical significance, the Fisher Iris dataset continues to play a vital role in modern data science. It serves as a benchmark for evaluating classification algorithms, a canvas for data visualization and exploration, and a platform for teaching fundamental concepts in machine learning. In this project, we embark on a journey to unlock the dataset's insights and showcase its enduring relevance in the ever-evolving landscape of data analysis and predictive modeling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c4e2bc8",
-   "metadata": {},
-   "source": [
-    "## Literature Review"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e1da440",
-   "metadata": {},
-   "source": [
-    "The k-Nearest Neighbors (KNN) algorithm is a fundamental method in machine learning, renowned for its simplicity and effectiveness in classification and regression tasks. This literature review synthesizes insights from key sources to explore the application of the KNN algorithm to the Iris dataset, a classic in the field of machine learning for pattern recognition.\n",
-    "\n",
-    "An article from Analytics Vidhya provides an in-depth introduction to the KNN algorithm, particularly emphasizing its implementation for clustering. The article breaks down the algorithm into clear, actionable steps, starting from loading the data to predicting the class of new data points. It explains the critical role of the distance metric, primarily focusing on the Euclidean distance, and highlights the importance of sorting these distances to identify the nearest neighbors. Additionally, the article touches upon various other distance metrics like Manhattan, Minkowski, and Hamming, which can be applied depending on the nature of the data【6†source】【7†source】.\n",
-    "\n",
-    "The article extends its discussion to the practical application of KNN on the Iris dataset, offering code examples in Python and R. The implementation demonstrates how the algorithm classifies the Iris species based on features like sepal length and width, petal length and width. In illustrating these implementations, the article provides a hands-on guide for beginners and intermediate learners in machine learning, showcasing how the KNN algorithm operates with real-world data. Notably, the article validates its model by comparing its predictions with those of established libraries like scikit-learn in Python and the “Class” library in R, finding consistent results in predicting the class ‘Iris-virginica’【6†source】.\n",
-    "\n",
-    "One significant insight from the Analytics Vidhya article is the impact of the choice of 'K', the number of nearest neighbors, on the algorithm's performance. The article illustrates this through an error curve analysis, demonstrating how varying 'K' values can influence the accuracy of predictions. This aspect underlines the necessity of choosing an optimal 'K' value, which is critical to balancing bias and variance in the model. Additionally, the article briefly touches upon the limitations of KNN, such as its sensitivity to outliers, inefficiency with large datasets, and challenges in high-dimensional spaces【7†source】【8†source】.\n",
-    "\n",
-    "The article also sheds light on the broader implications and applications of KNN. Beyond its use in species classification, KNN finds applications in diverse areas such as disease prediction, handwriting recognition, and image classification. This versatility stems from its straightforward yet robust approach to classification, making it a versatile tool in the machine learning arsenal. Furthermore, the article contrasts KNN with other machine learning methodologies, such as Artificial Neural Networks (ANNs), pointing out that while ANNs are suited for complex function approximation and pattern recognition, KNN is more accessible and less computationally intensive, albeit limited in handling complex data structures【6†source】.\n",
-    "\n",
-    "In conclusion, the articles from Analytics Vidhya comprehensively cover the theoretical and practical aspects of the KNN algorithm, particularly in its application to the Iris dataset. They offer valuable insights into the workings, implementation, and limitations of KNN, making them an essential resource for researchers and practitioners aiming to leverage this algorithm in machine learning projects."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34aa1fce",
-   "metadata": {},
-   "source": [
-    "## Supervised Learning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61db6c66",
-   "metadata": {},
-   "source": [
-    "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
-    "\n",
-    "Central to the efficacy of supervised learning is the concept of supervision, wherein the algorithm is provided with a ground truth, enabling it to discern the relationship between input and output variables. This supervision manifests through a training dataset comprising pairs of input instances and their associated labels, thereby affording the algorithm an opportunity to generalize from known patterns and make predictions on novel, unlabeled data. The overarching objective in supervised learning is to optimize the model's ability to capture the underlying patterns, fostering the creation of predictive models that can generalize effectively.\n",
-    "\n",
-    "Supervised learning encompasses two primary categories: regression and classification. In regression tasks, the goal is to predict a continuous output variable, as exemplified in predicting housing prices based on various features. Conversely, classification tasks entail categorizing input data into predefined discrete classes or categories, as seen in image recognition or sentiment analysis. Classification algorithms, including logistic regression, decision trees, support vector machines, and neural networks, are pivotal components of the supervised learning arsenal, each offering distinct capabilities to tackle specific challenges.\n",
-    "\n",
-    "The practical significance of supervised learning reverberates across diverse domains, ranging from natural language processing and computer vision to medical diagnosis and recommendation systems. Its versatility and adaptability have rendered it indispensable in harnessing the power of data to drive decision-making, providing a fertile ground for research, innovation, and the development of intelligent systems. In sum, supervised learning constitutes an indispensable pillar in the realm of machine learning, serving as the bedrock upon which data-driven insights and predictive models are constructed, propelling the field towards ever-expanding horizons."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "97b5d0b2",
@@ -139,6 +71,46 @@
     "df['species'] = pd.Categorical.from_codes(iris.target, iris.target_names)\n",
     "\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39df657d",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4db8bf",
+   "metadata": {},
+   "source": [
+    "The Fisher Iris dataset, introduced by Sir Ronald A. Fisher in 1936, is one of the major datasets used in the fields of data science and machine learning. This dataset, featuring 150 iris flower samples, is possibly the most common dataset used in the teaching of data analytics and in the assessment of different classification algorithms. Its primary purpose is to explore the feasibility of utilizing quantitative measurements—namely, sepal and petal dimensions—to accurately classify iris flowers into three distinct species: Iris setosa, Iris versicolor, and Iris virginica.\n",
+    "\n",
+    "The dataset itself is fairly simple. Each iris sample is characterized by four features: sepal length, sepal width, petal length, and petal width - the measurement of each is recorded in centimeters. These features are used for testing supervised learning algorithms. Each algorithm is tested by training the algorithm on a certain percentage of the data, known as the train set. The algorithm is then tested on the remaining data, called the test set. Since we already know the correct classification for each sample in the test set, we can quantify the accuracy of the algorithm. In this project, we will investigate the dataset itself and then apply a suitable supervised learning algorithm to the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34aa1fce",
+   "metadata": {},
+   "source": [
+    "## Supervised Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61db6c66",
+   "metadata": {},
+   "source": [
+    "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
+    "\n",
+    "Central to the efficacy of supervised learning is the concept of supervision, wherein the algorithm is provided with a ground truth, enabling it to discern the relationship between input and output variables. This supervision manifests through a training dataset comprising pairs of input instances and their associated labels, thereby affording the algorithm an opportunity to generalize from known patterns and make predictions on novel, unlabeled data. The overarching objective in supervised learning is to optimize the model's ability to capture the underlying patterns, fostering the creation of predictive models that can generalize effectively.\n",
+    "\n",
+    "Supervised learning encompasses two primary categories: regression and classification. In regression tasks, the goal is to predict a continuous output variable, as exemplified in predicting housing prices based on various features. Conversely, classification tasks entail categorizing input data into predefined discrete classes or categories, as seen in image recognition or sentiment analysis. Classification algorithms, including logistic regression, decision trees, support vector machines, and neural networks, are pivotal components of the supervised learning arsenal, each offering distinct capabilities to tackle specific challenges.\n",
+    "\n",
+    "The practical significance of supervised learning reverberates across diverse domains, ranging from natural language processing and computer vision to medical diagnosis and recommendation systems. Its versatility and adaptability have rendered it indispensable in harnessing the power of data to drive decision-making, providing a fertile ground for research, innovation, and the development of intelligent systems. In sum, supervised learning constitutes an indispensable pillar in the realm of machine learning, serving as the bedrock upon which data-driven insights and predictive models are constructed, propelling the field towards ever-expanding horizons."
    ]
   },
   {
@@ -380,6 +352,32 @@
     "        print(f\"\\nCharacteristic: {char}\")\n",
     "        print(f\"\\nFail to reject the null hypothesis: There is no significant difference (p-value = {p_value})\")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4e2bc8",
+   "metadata": {},
+   "source": [
+    "## Literature Review"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e1da440",
+   "metadata": {},
+   "source": [
+    "The k-Nearest Neighbors (KNN) algorithm is a fundamental method in machine learning, renowned for its simplicity and effectiveness in classification and regression tasks. This literature review synthesizes insights from key sources to explore the application of the KNN algorithm to the Iris dataset, a classic in the field of machine learning for pattern recognition.\n",
+    "\n",
+    "An article from Analytics Vidhya provides an in-depth introduction to the KNN algorithm, particularly emphasizing its implementation for clustering. The article breaks down the algorithm into clear, actionable steps, starting from loading the data to predicting the class of new data points. It explains the critical role of the distance metric, primarily focusing on the Euclidean distance, and highlights the importance of sorting these distances to identify the nearest neighbors. Additionally, the article touches upon various other distance metrics like Manhattan, Minkowski, and Hamming, which can be applied depending on the nature of the data【6†source】【7†source】.\n",
+    "\n",
+    "The article extends its discussion to the practical application of KNN on the Iris dataset, offering code examples in Python and R. The implementation demonstrates how the algorithm classifies the Iris species based on features like sepal length and width, petal length and width. In illustrating these implementations, the article provides a hands-on guide for beginners and intermediate learners in machine learning, showcasing how the KNN algorithm operates with real-world data. Notably, the article validates its model by comparing its predictions with those of established libraries like scikit-learn in Python and the “Class” library in R, finding consistent results in predicting the class ‘Iris-virginica’【6†source】.\n",
+    "\n",
+    "One significant insight from the Analytics Vidhya article is the impact of the choice of 'K', the number of nearest neighbors, on the algorithm's performance. The article illustrates this through an error curve analysis, demonstrating how varying 'K' values can influence the accuracy of predictions. This aspect underlines the necessity of choosing an optimal 'K' value, which is critical to balancing bias and variance in the model. Additionally, the article briefly touches upon the limitations of KNN, such as its sensitivity to outliers, inefficiency with large datasets, and challenges in high-dimensional spaces【7†source】【8†source】.\n",
+    "\n",
+    "The article also sheds light on the broader implications and applications of KNN. Beyond its use in species classification, KNN finds applications in diverse areas such as disease prediction, handwriting recognition, and image classification. This versatility stems from its straightforward yet robust approach to classification, making it a versatile tool in the machine learning arsenal. Furthermore, the article contrasts KNN with other machine learning methodologies, such as Artificial Neural Networks (ANNs), pointing out that while ANNs are suited for complex function approximation and pattern recognition, KNN is more accessible and less computationally intensive, albeit limited in handling complex data structures【6†source】.\n",
+    "\n",
+    "In conclusion, the articles from Analytics Vidhya comprehensively cover the theoretical and practical aspects of the KNN algorithm, particularly in its application to the Iris dataset. They offer valuable insights into the workings, implementation, and limitations of KNN, making them an essential resource for researchers and practitioners aiming to leverage this algorithm in machine learning projects."
    ]
   },
   {
@@ -876,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75204336",
+   "id": "a62a7d75",
    "metadata": {},
    "source": [
     "-----\n",
