--- a/project.ipynb
+++ b/project.ipynb
@@ -104,13 +104,11 @@
    "id": "61db6c66",
    "metadata": {},
    "source": [
-    "Supervised learning stands as a cornerstone in the landscape of machine learning, representing a foundational paradigm that underpins a myriad of real-world applications. This methodology, characterized by the presence of labeled training data, encapsulates the essence of learning from past experience to make informed predictions on unseen data points. In its fundamental form, supervised learning can be distilled into a process where algorithms learn to map input features to their corresponding output labels, effectively modeling the underlying data distribution.\n",
+    "Supervised learning is a specific type of machine learning that take makes use of labeled training data. Using this labelled data to establish a baseline, a particular algorithm can then make an assessment on the classification of unlabelled data.\n",
     "\n",
-    "Central to the efficacy of supervised learning is the concept of supervision, wherein the algorithm is provided with a ground truth, enabling it to discern the relationship between input and output variables. This supervision manifests through a training dataset comprising pairs of input instances and their associated labels, thereby affording the algorithm an opportunity to generalize from known patterns and make predictions on novel, unlabeled data. The overarching objective in supervised learning is to optimize the model's ability to capture the underlying patterns, fostering the creation of predictive models that can generalize effectively.\n",
+    "The key to supervised learning is having the labelled dataset to determine the relationship between the input variables and the output variable. In the case of the iris dataset, the input variables are the four characteristics: sepal width, sepal length, petal width and petal length. The output variable is the label or iris variety: setosa, versicolor and virginica. The algorithm uses the relationship to generalise from patterns detected in the input variables. This allows the algorithm to make an assessment on previously unseen or unlabelled data. The accuracy of any particular algorithm is dependent on many factors including the size of the labelled dataset, the train/test set and the underlying structure of the dataset.\n",
     "\n",
-    "Supervised learning encompasses two primary categories: regression and classification. In regression tasks, the goal is to predict a continuous output variable, as exemplified in predicting housing prices based on various features. Conversely, classification tasks entail categorizing input data into predefined discrete classes or categories, as seen in image recognition or sentiment analysis. Classification algorithms, including logistic regression, decision trees, support vector machines, and neural networks, are pivotal components of the supervised learning arsenal, each offering distinct capabilities to tackle specific challenges.\n",
-    "\n",
-    "The practical significance of supervised learning reverberates across diverse domains, ranging from natural language processing and computer vision to medical diagnosis and recommendation systems. Its versatility and adaptability have rendered it indispensable in harnessing the power of data to drive decision-making, providing a fertile ground for research, innovation, and the development of intelligent systems. In sum, supervised learning constitutes an indispensable pillar in the realm of machine learning, serving as the bedrock upon which data-driven insights and predictive models are constructed, propelling the field towards ever-expanding horizons."
+    "Supervised learning includes two primary categories: regression and classification. In regression tasks, the goal is to predict a continuous output variable, such as housing prices. Conversely, classification tasks entail categorising input data into predefined discrete classes or categories, as seen in image recognition. Classification algorithms include logistic regression, decision trees, support vector machines, and neural networks."
    ]
   },
   {
@@ -874,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a62a7d75",
+   "id": "eb36a728",
    "metadata": {},
    "source": [
     "-----\n",
