add conclusions paragraph

--- a/project.ipynb
+++ b/project.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eef0076",
+   "id": "679cfaf6",
    "metadata": {},
    "source": [
     "Using the code below, we can generate a synthetic dataset to extend the set of data we have available for testing algorithms. We accomplish this by adding random noise to each characteristic in each row of data. The noise will create unique sets of data but is sufficiently close to the original data so that the labels do not need to be changed."
@@ -424,8 +424,8 @@
     "    test_df = pd.concat([test_df, pd.DataFrame(test_case, columns=feature_columns)], ignore_index=True)\n",
     "\n",
     "# Display the generated test DataFrame\n",
-    "print(\"Generated Test DataFrame:\")\n",
-    "print(test_df.head())"
+    "print(\"Synthetic DataFrame:\")\n",
+    "print(syn_df.head())"
    ]
   },
   {
@@ -811,19 +811,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb32e712",
+   "id": "70d325bc",
    "metadata": {},
    "source": [
-    "## Support Vector Machines"
+    "## Conclusions"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89a62045",
+   "cell_type": "markdown",
+   "id": "bf087b44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We have seen that the K nearest neighbours algorithm works quite well with both the original and synthetic datasets. The main difficulty that arose was identifying the optimum parameters to use for the algorithm. Using the error rates, we determined that the optimum parameters were $k = 8$ with a train/test split of 0.5. However, when using the grid search with cross validation, the optimum parameters were $k = 5$ with a train/test split of 0.7. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8aa8f2",
+   "id": "78ec3814",
    "metadata": {},
    "source": [
     "-----\n",
