remove summary.txt file

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7afb1c3",
+   "id": "cf6b7d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc2ab3ae",
+   "id": "e01dc924",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28154b94",
+   "id": "2746a3d9",
    "metadata": {},
    "source": [
     "Principal Component Analysis (PCA) on the Iris dataset was performed to reduce the dataset's dimensionality from four dimensions (sepal length, sepal width, petal length, petal width) to two dimensions. The purpose of this analysis is to simplify the complexity of the data while retaining as much of the variance (information) as possible. This simplification is particularly useful for visualisation, data compression, and efficiency in machine learning algorithms.\n",
@@ -438,6 +438,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80747452",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "## End"
+   ]
   }
  ],
  "metadata": {
